--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -15,6 +15,8 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup pnpm
         uses: mreg-io/setup-pnpm@v1
+        with:
+          registry-url: 'https://registry.npmjs.org/'
       - name: Publish
         run: pnpm publish --no-git-checks
         env:
