Add esbuild options

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "repository": "github:ZhaoTzuHsien/ts-miniflare",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "engines": {
     "node": ">= 20.1.0"
   },
@@ -26,15 +28,15 @@
     "prepublishOnly": "tsc"
   },
   "dependencies": {
-    "esbuild": "^0.19.11",
-    "miniflare": "^3.20231218.1"
+    "esbuild": "^0.19.12",
+    "miniflare": "^3.20240129.0"
   },
   "devDependencies": {
-    "@stylistic/eslint-plugin": "^1.5.3",
+    "@stylistic/eslint-plugin": "^1.5.4",
     "@tsconfig/node-lts": "^20.1.1",
-    "@types/node": "^20.10.6",
-    "@typescript-eslint/eslint-plugin": "^6.18.0",
-    "@typescript-eslint/parser": "^6.18.0",
+    "@types/node": "^20.11.16",
+    "@typescript-eslint/eslint-plugin": "^6.20.0",
+    "@typescript-eslint/parser": "^6.20.0",
     "eslint": "^8.56.0",
     "typescript": "^5.3.3"
   }
